--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,16 @@ td {
     vertical-align: middle;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .btn-primary, .btn-primary:focus {
     background-color: #7cc242;
     color: #fff;
